pom.xml updated